# StewiePaints

./: CMakeLists.txt  README.md  package.xml
include/StewiePaints/: process_img.h
include/stewie_paints/: define_paints_strokes.h  process_img.h
launch/: framework.launch
src/: first_paint.cpp
