<?xml version="1.0"?>
<package format="2">
  <name>stewie_paints</name>
  <version>0.0.0</version>
  <description>The stewie_paints package</description>
  
  <maintainer email="adam@todo.todo">adam</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>move_interface</depend>

  <export>

  </export>
</package>
